gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-crate_visibility_modifier.rs
crate struct Bender { // { dg-error ".E0658." "" { target *-*-* } }
    earth: bool,
    fire: bool,
    air: bool,
    water: bool,
}

fn main() {}

